<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gaps</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo_desc">Main logo</string>
    <string name="play">Play</string>
    <string name="title_activity_play_game">PlayGameActivity</string>
    <string name="play_game_title">Gaps Solitaire</string>
    <string name="shuffle_button">Shuffle</string>
    <string name="home_button">Home</string>
    <string name="new_game">New Game</string>
    <string name="you_win">You Win!</string>
    <string name="you_lose">You Lose!</string>
    <string name="shuffles_remaining_label">Shuffles Remaining</string>
    <string name="no_moves">No Moves Remaining</string>
    <string name="cancel">Cancel</string>
    <string name="four">4</string>

</resources>