<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="#ccc"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/shuffle_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="right|center_vertical"
            android:text="@string/shuffle_button"
            android:onClick="shuffle" />

        <TextView
            android:id="@+id/play_game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:text="@string/play_game_title" />
        
        <TextView
            android:id="@+id/shuffles_remaining_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/shuffles_remaining_vertical_margin"
            android:layout_toLeftOf="@id/shuffle_button"
            android:layout_toRightOf="@id/play_game_title"
            android:gravity="center_horizontal"
            android:text="@string/shuffles_remaining_label" />
        
        <TextView
            android:id="@+id/shuffles_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/shuffle_button"
            android:layout_alignParentBottom="false"
            android:layout_below="@id/shuffles_remaining_label"
            android:layout_toLeftOf="@id/shuffle_button"
            android:layout_toRightOf="@id/play_game_title"
            android:gravity="center_horizontal"
            android:text="@string/four" />
        
        <Button
            android:id="@+id/home_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/home_button"
            android:onClick="goHome" />

    </RelativeLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:background="#ccc"
    android:orientation="horizontal" >
	    <com.ryankuczka.gaps.GameView
	        android:id="@+id/game_view"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:background="#fff"
	        android:paddingBottom="20dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:paddingTop="20dp" />
	</LinearLayout>

</LinearLayout>